name foxed and overflow fixed

--- a/HTML_CSS_JS_Projects/002_random_joke_generator/style.css
+++ b/HTML_CSS_JS_Projects/002_random_joke_generator/style.css
@@ -45,6 +45,7 @@ body {
     align-items: center;
     padding: 0 2%;
     text-align: center;
+    overflow: scroll;
 }
 
 .button-section {
